[package]
name = "rumidataserver_get"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
sqlx = { version = "0.8", features = [ "mysql", "runtime-tokio", "tls-native-tls", "chrono" ] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8.4"
serde = "1.0.219"
once_cell = "1.19.0"
